fix up scorecard printing for at least chrome
I'm not sure why firefox isn't looking right yet though.

--- a/assets/style/scorecard.scss
+++ b/assets/style/scorecard.scss
@@ -38,7 +38,7 @@ $print-page-size: letter;
 
 .scorecard-page {
     height: 5in;
-    page-break-after: always;
+    break-after: page;
 }
 
 .scorecard-brand {
